--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
 		"vite-plugin-solid": "^2.11.6",
 		"vite-plugin-wasm": "^3.4.1",
 		"zod": "^3.24.3"
+	},
+	"devDependencies": {
+		"vite-plugin-pwa": "^1.0.0"
 	}
 }
