--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@solid-primitives/keyboard": "^1.3.0",
 		"solid-automerge": "1.0.0-beta.5",
 		"solid-js": "^1.9.5",
+		"solid-toast": "^0.5.0",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.2",
 		"vite-plugin-solid": "^2.11.6",
