--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
 		"@automerge/automerge-repo-network-websocket": "2.0.0-alpha.27",
 		"@automerge/automerge-repo-storage-indexeddb": "2.0.0-alpha.27",
 		"@solid-primitives/keyboard": "^1.3.0",
+		"@tsparticles/engine": "^3.8.1",
+		"@tsparticles/solid": "^3.0.0",
+		"@types/canvas-confetti": "^1.9.0",
+		"canvas-confetti": "^1.9.3",
 		"solid-automerge": "1.0.0-beta.5",
 		"solid-js": "^1.9.5",
 		"solid-toast": "^0.5.0",
