--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@automerge/automerge-repo-network-websocket": "2.0.0-alpha.27",
 		"@automerge/automerge-repo-storage-indexeddb": "2.0.0-alpha.27",
 		"@solid-primitives/keyboard": "^1.3.0",
+		"@solid-primitives/storage": "^4.3.1",
+		"@solidjs/router": "^0.15.3",
 		"@tsparticles/engine": "^3.8.1",
 		"@tsparticles/solid": "^3.0.0",
 		"@types/canvas-confetti": "^1.9.0",
