--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 		"zod": "^3.24.3"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.4.21",
+		"postcss": "^8.5.3",
 		"vite-plugin-pwa": "^1.0.0"
 	}
 }
