--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@automerge/automerge-repo": "2.0.0-alpha.27",
 		"@automerge/automerge-repo-network-websocket": "2.0.0-alpha.27",
 		"@automerge/automerge-repo-storage-indexeddb": "2.0.0-alpha.27",
+		"@kobalte/core": "^0.13.9",
 		"@solid-primitives/keyboard": "^1.3.0",
 		"@solid-primitives/storage": "^4.3.1",
 		"@solidjs/router": "^0.15.3",
