--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
 	"type": "module",
 	"scripts": {
 		"start": "vite",
-		"dev": "vite",
-		"mk": "vite build",
-		"preview": "vite preview"
+		"dev": "tsr watch && vite",
+		"mk": "trs generate && vite build",
+		"preview": "vite preview",
+		"generate-routes": "tsr generate",
+		"watch-routes": "tsr watch"
 	},
 	"license": "AGPL-3.0+",
 	"dependencies": {
@@ -18,6 +20,9 @@
 		"@solid-primitives/keyboard": "^1.3.0",
 		"@solid-primitives/storage": "^4.3.1",
 		"@solidjs/router": "^0.15.3",
+		"@tanstack/solid-router": "^1.117.1",
+		"@tanstack/solid-start": "^1.117.2",
+		"@tanstack/virtual-file-routes": "^1.115.0",
 		"@tsparticles/engine": "^3.8.1",
 		"@tsparticles/solid": "^3.0.0",
 		"@types/canvas-confetti": "^1.9.0",
@@ -32,6 +37,8 @@
 		"zod": "^3.24.3"
 	},
 	"devDependencies": {
+		"@tanstack/router-cli": "^1.117.1",
+		"@tanstack/router-plugin": "^1.117.2",
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.3",
 		"vite-plugin-pwa": "^1.0.0"
