use automerge directly in the edge function

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"license": "AGPL-3.0+",
 	"dependencies": {
+		"@automerge/automerge": "2.2.8",
 		"@automerge/automerge-repo": "2.0.0-alpha.27",
 		"@automerge/automerge-repo-network-websocket": "2.0.0-alpha.27",
 		"@automerge/automerge-repo-storage-indexeddb": "2.0.0-alpha.27",
